Se comenzó a diseñar el Grid de productos

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="styles/headerNavBar.css">
     <link rel="stylesheet" href="styles/notifications.css">
     <link rel="stylesheet" href="styles/banner.css">
-    <link rel="stylesheet" href="styles/pageWrapper.css">
-
+    <link rel="stylesheet" href="styles/pageRouter.css">
+    <link rel="stylesheet" href="styles/HomePage.css">
+    <link rel="stylesheet" href="styles/donationsContainer.css">
+    
 
     <script src="index.js" type="module"></script>
     <script src="scripts/libraries/gsap.min.js"></script>
