--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/pageRouter.css">
     <link rel="stylesheet" href="styles/HomePage.css">
     <link rel="stylesheet" href="styles/donationsContainer.css">
+    <link rel="stylesheet" href="styles/loginPage.css">
     
 
     <script src="index.js" type="module"></script>
