Diseño de pagina home finalizado V1

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="styles/pageRouter.css">
     <link rel="stylesheet" href="styles/HomePage.css">
     <link rel="stylesheet" href="styles/donationsContainer.css">
+    <link rel="stylesheet" href="styles/filterSection.css">
+    <link rel="stylesheet" href="styles/scrollbar.css">
+    <link rel="stylesheet" href="styles/footer.css">
+
     
 
     <script src="index.js" type="module"></script>
