--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/filterSection.css">
     <link rel="stylesheet" href="styles/scrollbar.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/sideMenu.css">
 
     
 
