Visor imagenes terminado

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="styles/filterSection.css">
     <link rel="stylesheet" href="styles/scrollbar.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/productRegistrationPage.css">
+    <link rel="stylesheet" href="styles/imageViewer.css">
+
 
     
 
