--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/productRegistrationPage.css">
     <link rel="stylesheet" href="styles/imageViewer.css">
+    <link rel="stylesheet" href="styles/imagePicker.css">
 
 
     
