Se comenzó la pagina de producto

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="styles/productRegistrationPage.css">
     <link rel="stylesheet" href="styles/imageViewer.css">
     <link rel="stylesheet" href="styles/imagePicker.css">
-
+    <link rel="stylesheet" href="styles/productPage.css">
+    
     <link rel="stylesheet" href="styles/sideMenu.css">
 
     
