--- a/public/borrar.html
+++ b/public/borrar.html
@@ -1,39 +1,31 @@
-<div id="formSection">
+<div id="productPage-container">
+    
+    <div id="main-product-container">
 
-    <h1>Nueva Donación</h1>
+        <div id="productImage"></div>
+        <div id="productInfo">
+        <div id="productInfo-container">
 
-    <img src="../images/others/charity.svg" alt="Neva donación">
-    <form>
-        <div class="inputContainer">
-            <input type="text" id="product-name">
-            <label for="product-name">Título</label>
-        </div>
-        <div class="inputContainer">
-            <textarea id="product-description" class="scrollbar-gray"></textarea>
-            <label for="product-description">Descripción</label>
-        </div>
-        <div class="inputContainer">
-            <select id="product-category">
-                <option value="">Telefonos</option>
-            </select>
-            <label for="product-category">Categoría</label>
-        </div>
-        <div class="inputContainer">
-            <select id="product-department">
-                <option value="">Telefonos</option>
-            </select>
-            <label for="product-department">Departamento</label>
-        </div>
-        <div class="inputContainer">
-            <select id="product-municipality">
-                <option value="">Telefonos</option>
-            </select>
-            <label for="product-municipality">Municipío</label>
-        </div>
+            <div class="tags">
+                <span id="cathegory">Tecnología</span>
+                <span class="separator">|</span>
+                <span id="place">Villa Nueva</span>
+            </div>
 
-        <div class="filePicker"></div>
+            <h1 id="product-title">Cámara CANON 452 Nueva con 92 px de resolución y fanta </h1>
 
-        <input type="submit" id="send-donation-button" value="Realizar Donación">
-        
-    </form>
+            <div id="product-author">
+                <img src="images/profileImages/1.jpg" alt="">
+                <span>Diego Morales</span>
+            </div>
+
+            <p id="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corrupti accusamus molestiae corporis culpa dignissimos placeat officiis repudiandae voluptatem, et facilis aspernatur atque tempora deleniti expedita ipsa obcaecati rem reiciendis!</p>
+
+            <div id="product-buttons">
+                <button class="requestDonation"></button>
+            </div>
+        </div>
+        </div>
+    </div>
 </div>
+
