Se agregaron los popUps de solicitud y login

--- a/public/borrar.html
+++ b/public/borrar.html
@@ -1,31 +1,6 @@
-<div id="productPage-container">
-    
-    <div id="main-product-container">
-
-        <div id="productImage"></div>
-        <div id="productInfo">
-        <div id="productInfo-container">
-
-            <div class="tags">
-                <span id="cathegory">Tecnología</span>
-                <span class="separator">|</span>
-                <span id="place">Villa Nueva</span>
-            </div>
-
-            <h1 id="product-title">Cámara CANON 452 Nueva con 92 px de resolución y fanta </h1>
-
-            <div id="product-author">
-                <img src="images/profileImages/1.jpg" alt="">
-                <span>Diego Morales</span>
-            </div>
-
-            <p id="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corrupti accusamus molestiae corporis culpa dignissimos placeat officiis repudiandae voluptatem, et facilis aspernatur atque tempora deleniti expedita ipsa obcaecati rem reiciendis!</p>
-
-            <div id="product-buttons">
-                <button class="requestDonation"></button>
-            </div>
-        </div>
-        </div>
-    </div>
+<img src="../images/icons/stop.png" alt="unauthorized">
+<h3>Debes de iniciar Sesión</h3>
+<div class="buttons">
+    <button class="blue-button">Iniciar Sesión</button>
+    <button class="purple-button">Registrate</button>
 </div>
-
