Botones en pag producto y modif en Sesion local

--- a/public/borrar.html
+++ b/public/borrar.html
@@ -1,6 +1,4 @@
-<img src="../images/icons/stop.png" alt="unauthorized">
-<h3>Debes de iniciar Sesión</h3>
-<div class="buttons">
-    <button class="blue-button">Iniciar Sesión</button>
-    <button class="purple-button">Registrate</button>
+<div class="statusInfo">
+    <div class="icon"></div>
+    <div class="textInfo"></div>
 </div>
