--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/HomePage.css">
     <link rel="stylesheet" href="styles/donationsContainer.css">
     <link rel="stylesheet" href="styles/loginPage.css">
+    <link rel="stylesheet" href="styles/registrationPage.css">
     <link rel="stylesheet" href="styles/filterSection.css">
     <link rel="stylesheet" href="styles/scrollbar.css">
     <link rel="stylesheet" href="styles/footer.css">
