--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>Proyecto POO</title>
 
     <link rel="stylesheet" href="styles/libraries/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/libraries/fancybox.css">
+    
 
 
     <link rel="stylesheet" href="styles/main.css">
@@ -31,6 +33,9 @@
     <link rel="stylesheet" href="styles/sideMenu.css">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/unauthorizedPopUp.css">
+    <link rel="stylesheet" href="styles/donationRequestsContainer.css">
+    <link rel="stylesheet" href="styles/manageRequestPopUp.css">
+    <link rel="stylesheet" href="styles/alertPopUp.css">
     
 
     <link href="fonts/Yanone.css" rel="stylesheet">
@@ -41,6 +46,8 @@
     <script src="scripts/libraries/gsap.min.js"></script>
     <script src="scripts/libraries/jQuery v3.4.1.js"></script>
     <script src="scripts/libraries/typed.js"></script>
+    <script src="scripts/libraries/moment.js"></script>
+    <script src="scripts/libraries/fancyBox.js"></script>
     <script src="https://cdn.socket.io/4.1.2/socket.io.min.js"
         integrity="sha384-toS6mmwu70G0fw54EGlWWeA4z3dyJ+dlXBtSURSKN4vyRFOcxd3Bzjj/AoOwY+Rg"
         crossorigin="anonymous"></script>
