Se agrego funcionalidad al contenedor de productos

--- a/public/borrar.html
+++ b/public/borrar.html
@@ -1,57 +1,5 @@
-<div class="applicant-info">
-
-    <img src="images/profileImages/3.jpg" alt="profile" class="profilePicture">
-
-    <div class="userName">
-        <h3>Diego Morales</h3>
-        <h4>@aq202</h4>
-    </div>
-
-
-    <ul class="generalData">
-        <li>
-            <strong>Email: </strong>
-            <p>diego@gmail.com</p>
-        </li>
-        <li>
-            <strong>DPI: </strong>
-            <p>3943011290101</p>
-        </li>
-        <li>
-            <strong>Sexo: </strong>
-            <p>femenino</p>
-        </li>
-        <li>
-            <strong>Edad:</strong>
-            <p>17</p>
-        </li>
-    </ul>
-
-    <button class="white-button">Documentos</button>
-</div>
-
-<div class="request-data">
-    <h3>Solicitud de Donación</h3>
-
-    <p class="requestMessage">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet magnam nisi minus eos nulla
-        a, reiciendis obcaecati voluptatum nesciunt neque iure fugit in quos dolor totam eveniet corporis alias
-        voluptas.
-    </p>
-
-    <div class="giveEmailCheck">
-        <input type="checkbox" id="send-email">
-        <label for="send-email">Estoy de acuerdo en proporcionar mi dirección de email.</label>
-    </div>
-    
-    <div class="warning">
-        <div class="icon"></div>
-        <div class="textInfo">No aceptes ninguna solicitud sin antes verificar la identidad del usuario, a través de sus documentos.</div>
-    </div>
-    
-    <div class="manage-buttons">
-        <button class="acceptRequest green-button">Aceptar</button>
-        <button class="rejectRequest red-button">Rechazar</button>
-    </div>
-
-
+<div class="no-results-message">
+    <h3>Ups!... no se encontraron resultados</h3>
+    <h4>Porfavor intenta con otra búsqueda</h4>
+    <img src="images/others/not-found.svg" alt="Not found">
 </div>
