Loading y not found page. Cambio en filtro categ.

--- a/public/borrar.html
+++ b/public/borrar.html
@@ -1,5 +1,5 @@
-<div class="no-results-message">
-    <h3>Ups!... no se encontraron resultados</h3>
-    <h4>Porfavor intenta con otra búsqueda</h4>
-    <img src="images/others/not-found.svg" alt="Not found">
+<div class="spinner1">
+    <div class="spinner2">
+        <div class="spinner3"></div>
+    </div>
 </div>
