--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
     <link rel="stylesheet" href="styles/donationRequestsContainer.css">
     <link rel="stylesheet" href="styles/manageRequestPopUp.css">
     <link rel="stylesheet" href="styles/alertPopUp.css">
+    <link rel="stylesheet" href="styles/pageNotFound.css">
+    <link rel="stylesheet" href="styles/loadingView.css">
     
 
     <link href="fonts/Yanone.css" rel="stylesheet">
