Diseño de página de perfil de usuario

--- a/public/borrar.html
+++ b/public/borrar.html
@@ -1,5 +1,23 @@
-<div class="spinner1">
-    <div class="spinner2">
-        <div class="spinner3"></div>
+<div class="banner"></div>
+<div class="profileData">
+
+    <div class="dataContainer">
+
+        <img src="images/profileImages/1.jpg" alt="profile" class="profilePicture">
+
+        <div class="userName">
+            <h3>Diego Morales</h3>
+            <h4>@Aq202</h4>
+        </div>
     </div>
+
+</div>
+
+<div class="profileDonations">
+
+    <div class="optionsMenu">
+        <div class="donationsMade">Donaciones Realizadas</div>
+        <div class="donationsReceived">Donaciones Recibidas</div>
+    </div>
+
 </div>
