--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="styles/alertPopUp.css">
     <link rel="stylesheet" href="styles/pageNotFound.css">
     <link rel="stylesheet" href="styles/loadingView.css">
+    <link rel="stylesheet" href="styles/profilePage.css">
     
 
     <link href="fonts/Yanone.css" rel="stylesheet">
