profilePage terminada, error getProfileData solved

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="styles/pageNotFound.css">
     <link rel="stylesheet" href="styles/loadingView.css">
     <link rel="stylesheet" href="styles/profilePage.css">
+    <link rel="stylesheet" href="styles/imageStyle.css">
     
 
     <link href="fonts/Yanone.css" rel="stylesheet">
