--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto POO</title>
 
+    <link rel="icon" type="image/x-icon" href="images/icons/logo.svg">
+
     <link rel="stylesheet" href="styles/libraries/bootstrap.min.css">
     <link rel="stylesheet" href="styles/libraries/fancybox.css">
     
